# miniCRM

./: Dockerfile  README.md  app.db  docker-compose.yml  pyproject.toml  tasks.py
.github/worflows/: ci.yml
app/: db.py  main.py  services.py  settings.py
app/api/: __init__.py  contact.py  lead.py  operator.py  source.py  stats.py
app/crud/: __init__.py  contact.py  lead.py  operator.py  source.py
app/models/: __init__.py  contact.py  lead.py  operator.py  source.py
app/schemas/: __init__.py  contact.py  lead.py  operator.py  source.py
app/tests/: conftest.py  test_flow.py  test_health.py
migrations/: env.py
migrations/versions/: d862d802e5b1_init.py
