[project]
name = "minicrm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "fastapi>=0.122.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx[http2]>=0.28.1",
    "invoke>=2.2.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
